feat: simulazione per fasi, sdadata T35, piazzamento iniziale, obiettivi corretti
feat: simulazione per fasi, sdadata T35, piazzamento iniziale, obiettivi corretti

- Replay per fasi: ogni snapshot = 1 fase di 1 giocatore (TRIS/RINFORZI/ATTACCHI/SPOSTAMENTO)
- Navigazione: ◀▶ saltano turno intero, barra progresso segue turno reale (non indice snapshot)
- Label turno usa snapCorr.turno invece dell'indice array
- Sdadata obbligatoria dal T35 in ordine inverso (GIALLO→VERDE→ROSSO→BLU), partita finisce al T45
- Piazzamento iniziale: BLU/ROSSO 10t a 3 carri, VERDE/GIALLO 11t (9×3 + 1×2 + 1×1)
- Priorità piazzamento: in obiettivo > blocca continente > nicchia > ponte > punti
- RisikoBoardData: tutti 16 obiettivi con territori specifici (allineati al database)
- Fix adiacenza: africa_orientale e medio_oriente non sono adiacenti
- Territorio interno (tutti adiacenti propri) → ridotto a 1 carro
- Non apre cartina se ci sono territori nemici adiacenti con ≤ 2 armate
- AI: bonus obiettivo cresce ogni turno sdadata (+150/turno), blocco continente scende
- SnapshotTurnoDto: aggiunto campo fase e giocatore
- Fine partita non rivela il vincitore (utente deve indovinare gli obiettivi)